--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Linden Hill', Georgia, serif;
+    font-family: Georgia, serif;
     font-size: 19px;
 }
 
@@ -53,13 +53,13 @@ body {
 
 div.highlight pre, pre.literal-block {
     margin: 5px;
-    font-family: 'Anonymous Pro', 'Consolas', 'Menlo', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
+    font-family: sans-serif, 'Anonymous Pro', 'Consolas', 'Menlo', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
     font-size: 14px;
 }
 
 div.highlight, pre.literal-block {
     border: 1px solid #DDDDDD;
-    font-family: 'Anonymous Pro','Consolas','Menlo','Deja Vu Sans Mono','Bitstream Vera Sans Mono',monospace;
+    font-family: sans-serif, 'Anonymous Pro','Consolas','Menlo','Deja Vu Sans Mono','Bitstream Vera Sans Mono',monospace;
     margin: 20px 0;
     overflow: auto;
     padding: 10px;
@@ -70,21 +70,21 @@ pre.literal-block {
 }
 
 tt.literal {
-    font-family: 'Anonymous Pro', 'Consolas', 'Menlo', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
+    font-family: sans-serif, 'Anonymous Pro', 'Consolas', 'Menlo', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
     background-color: #eee;
     padding: 2px 5px;
     font-size: 0.8em;
 }
 
 cite {
-    font-family: 'Anonymous Pro', 'Consolas', 'Menlo', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
+    font-family: sans-serif, 'Anonymous Pro', 'Consolas', 'Menlo', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
     font-size: 13px;
     font-style: normal;
 }
 
 code {
     background-color: #EEEEEE;
-    font-family: 'Anonymous Pro', 'Consolas', 'Menlo', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
+    font-family: sans-serif, 'Anonymous Pro', 'Consolas', 'Menlo', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
     border: 1px solid #ddd;
     padding: 0 2px 2px 3px;
     font-size: 0.8em;
