--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -4,6 +4,7 @@ body {
 }
 
 #blogtitle {
+    font-family: sans-serif;
     font-size: 3em;
 }
 #blogtitle a, #blogtitle a:hover, #blogtitle a:visited {
